--- a/styles/Layout/background.scss
+++ b/styles/Layout/background.scss
@@ -1,4 +1,3 @@
-.header-bg {
-    background-color: rgb(227, 27, 35);
-    background-color: linear-gradient(0deg, rgba(227, 27, 35, 0.7693277994791666) 0%, rgba(253, 239, 66, 1) 35%, rgba(0, 133, 63, 1) 100%);
+.container{
+    padding-bottom: 50%;
 }
